added upload image feature

--- a/app/data/form_schema/project_files.json
+++ b/app/data/form_schema/project_files.json
@@ -81,7 +81,7 @@
                     "can_screenshot": false
                 }
             ], 
-            "name": "scip_files", 
+            "name": "project_files",
             "label": ""
         }
     ]
