--- a/client/bower.json
+++ b/client/bower.json
@@ -30,6 +30,7 @@
     "v-accordion": "~1.4.1",
     "ng-jsoneditor": "angular-tools/ng-jsoneditor#~1.0.0",
     "restangular": "~1.5.2",
-    "angular-material-data-table": "~0.10.9"
+    "angular-material-data-table": "~0.10.9",
+    "ng-file-upload": "~12.0.4"
   }
 }
