--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,10 @@ server {
        alias /var/www/csitewalk/client/static;
     }
 
+    location /uploads {
+       alias /var/www/csitewalk/client/static/uploads;
+    }
+
     location /resources {
         alias /var/www/csitewalk/client/static/resources;
         expires max;
