--- a/conf/local/nginx.conf
+++ b/conf/local/nginx.conf
@@ -1,10 +1,10 @@
 server {
     listen 82;
-    listen 443 ssl;
+    server_name localhost;
 
     root /var/www/csitewalk;
 
-    server_name localhost;
+    listen 443 ssl;
     ssl on;
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
@@ -16,6 +16,10 @@ server {
 
     location /static {
        alias /var/www/csitewalk/client/static;
+    }
+
+    location /uploads {
+       alias /var/www/csitewalk/client/static/uploads;
     }
 
     location /resources {
