--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ GeoAlchemy2==0.2.6
 Jinja2==2.8
 Mako==1.0.3
 MarkupSafe==0.23
+Pillow==2.6.0
 SQLAlchemy==1.0.10
 SQLAlchemy-Utils==0.31.4
 Shapely==1.5.13
