fixed uploading of project files

--- a/conf/local/nginx.conf
+++ b/conf/local/nginx.conf
@@ -4,10 +4,10 @@ server {
 
     root /var/www/csitewalk;
 
-    listen 443 ssl;
-    ssl on;
-    ssl_certificate /etc/nginx/ssl/nginx.crt;
-    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    # listen 443 ssl;
+    # ssl on;
+    # ssl_certificate /etc/nginx/ssl/nginx.crt;
+    # ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
     access_log /var/log/nginx-sample-access.log;
     error_log /var/log/nginx-sample-error.log;
